# django_rapyd_modernauth

./: .bumpversion.cfg  .editorconfig  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  Pipfile  SECURITY.md  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.cfg  setup_env.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: publish.yml  release.yml  test.yml
modernauth/: __init__.py  admin.py  backends.py  models.py  tests.py
testproject/testproject/: settings.py
