[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-rapyd-modernauth"
description = "A Django application that provides a custom User model where the username is the email address."
version = "0.0.6"
authors = [
  { name="Karthic Raghupathi", email="karthicr@gmail.com" },
]
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "Django>=4.2,<5.3"
]
keywords = ["django", "auth", "custom", "model", "rapyd"]
license = {file = "LICENSE"}
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = [
  "python-dotenv",
  "tox",
  "bump-my-version",
  "build",
  "twine",
  "pre-commit",
]

[project.urls]
Homepage = "https://github.com/karthicraghupathi/django_rapyd_modernauth"
Issues = "https://github.com/karthicraghupathi/django_rapyd_modernauth/issues"

[tool.setuptools.packages.find]
include = ["modernauth*"]

[tool.setuptools.package-data]
modernauth = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
  "modernauth/migrations",
  "testproject",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "C90",  # mccabe complexity
]
ignore = [
  "E501",  # line too long (the formatter wraps where it can)
  "F401",  # imported but unused (sometimes intentional in __init__.py)
  "F403",  # wildcard imports (Django settings convention)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["modernauth", "testproject"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
django = ["django"]

[tool.bumpversion]
current_version = "0.0.6"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "modernauth/__init__.py"
