[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-rapyd-modernauth"
description = "A Django application that provides a custom User model where the username is the email address."
version = "0.0.6"
authors = [
  { name="Karthic Raghupathi", email="karthicr@gmail.com" },
]
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "Django>=4.2,<5.3"
]
keywords = ["django", "auth", "custom", "model", "rapyd"]
license = {file = "LICENSE"}
classifiers = [
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = [
  "python-dotenv",
  "tox",
  "bump-my-version",
  "build",
  "twine",
  "pre-commit",
  "mypy",
  "django-stubs[compatible-mypy]",
]

[project.urls]
Homepage = "https://github.com/karthicraghupathi/django_rapyd_modernauth"
Issues = "https://github.com/karthicraghupathi/django_rapyd_modernauth/issues"

[tool.setuptools.packages.find]
include = ["modernauth*"]

[tool.setuptools.package-data]
modernauth = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
  "modernauth/migrations",
  "testproject",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "C90",  # mccabe complexity
]
ignore = [
  "E501",  # line too long (the formatter wraps where it can)
  "F401",  # imported but unused (sometimes intentional in __init__.py)
  "F403",  # wildcard imports (Django settings convention)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["modernauth", "testproject"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
django = ["django"]

[tool.mypy]
python_version = "3.10"
plugins = ["mypy_django_plugin.main"]
files = ["modernauth"]
exclude = ["modernauth/migrations/"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/testproject"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "modernauth.tests"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# testproject is loaded by the django-stubs plugin so it can resolve
# INSTALLED_APPS, AUTH_USER_MODEL, etc. - we don't want mypy to
# type-check the test harness itself.
module = "testproject.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "testproject.settings"
strict_settings = false

[tool.bumpversion]
current_version = "0.0.6"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "modernauth/__init__.py"
