[metadata]
name = django-rapyd-modernauth
version = 0.0.4
description = A Django application that provides a custom User model where the username is the email address.
long_description = file:readme.md
author="Karthic Raghupathi",
author_email="karthicr@gmail.com",
url = https://github.com/karthicraghupathi/django_rapyd_modernauth
license = Apache Software License
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = true
python_requires = >=3.11
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=4.2,<4.3
